--- a/ui.css
+++ b/ui.css
@@ -1,15 +1,3 @@
-content  {
-  -webkit-app-region: no-drag;
-  position: absolute;
-  background: rgb(255, 255, 255);
-  overflow-wrap: break-word;
-  padding: 7px 7px 7px 7px;
-  bottom: 0;
-  overflow: auto;
-  top: 0;
-  width: 98%;
-}
-
 titlebar {
   -webkit-app-region: drag;
   overflow: hidden;
@@ -28,6 +16,20 @@ titlebar i.fa {
   cursor: pointer;
 }
 
+titlebar .divider-vertical {
+  border-right: #AAA 1px solid;
+  width: 1px;
+  height: 12px;
+  bottom: -12px;
+  float: right;
+  position: relative;
+}
+
+titlebar .titlebar-name {
+  display: inline-block;
+  padding-left: 7px;
+}
+
 container {
   float: left;
   position: fixed;
@@ -38,6 +40,28 @@ container {
   margin-left: auto;
   margin-right: auto;
   max-width: 980px;
+}
+
+container:after {
+  content: '';
+  position: absolute;
+  background: #fff;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  pointer-events: none;
+}
+
+content  {
+  -webkit-app-region: no-drag;
+  position: absolute;
+  background: rgb(255, 255, 255);
+  overflow-wrap: break-word;
+  padding: 7px 7px 7px 7px;
+  bottom: 0;
+  overflow: auto;
+  top: 0;
+  width: 98%;
 }
 
 ::-webkit-scrollbar {
