--- a/ui.css
+++ b/ui.css
@@ -16,6 +16,16 @@ titlebar i.fa {
   cursor: pointer;
 }
 
+titlebar i.markdown-mark {
+  -webkit-app-region: drag;
+  background: url('./img/markdown-mark.svg');
+  background-size: contain;
+  height: 14px;
+  width: 23px;
+  margin-left: 7px;
+  margin-right: 0;
+}
+
 titlebar .divider-vertical {
   border-right: #AAA 1px solid;
   width: 1px;
@@ -23,11 +33,6 @@ titlebar .divider-vertical {
   bottom: -12px;
   float: right;
   position: relative;
-}
-
-titlebar .titlebar-name {
-  display: inline-block;
-  padding-left: 7px;
 }
 
 container {
@@ -67,14 +72,13 @@ content  {
 ::-webkit-scrollbar {
   width: 7px;
   height: 7px;
+  background: rgba(99, 99, 99, 0.3);
 }
 
 ::-webkit-scrollbar-thumb:vertical {
-  background: rgba(99, 99, 99, 0.3);
   border-radius: 15px;
 }
 
 ::-webkit-scrollbar-thumb:horizontal {
-  background: rgba(99, 99, 99, 0.3);
   border-radius: 5px;
 }
