--- a/ui.css
+++ b/ui.css
@@ -18,10 +18,10 @@ titlebar i.fa {
 
 titlebar i.markdown-mark {
   -webkit-app-region: drag;
-  background: url('./img/markdown-mark.svg');
+  background: url('./img/markdown-preview-mark.svg');
   background-size: contain;
   height: 14px;
-  width: 23px;
+  width: 31px;
   margin-left: 7px;
   margin-right: 0;
 }
