--- a/static-page/styles/ui.css
+++ b/static-page/styles/ui.css
@@ -1,22 +1,16 @@
 titlebar {
   overflow: hidden;
   position: absolute;
-  top: 0;
-  left: 0;
   height: 23px;
   width: 100%;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 titlebar i.fa {
+  -webkit-app-region: no-drag;
   margin-right: 5px;
   margin-top: 5px;
   cursor: pointer;
-}
-
-.mdp-window {
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  border: #000 1px solid;
 }
 
 titlebar i.markdown-mark {
@@ -43,6 +37,10 @@ container {
   position: absolute;
   top: 27px;
   bottom: 0;
+  /* right: 0; */
+  /* left: 0; */
+  /* margin-left: auto; */
+  /* margin-right: auto; */
   max-width: 980px;
   width: 100%;
   height: 500px;
@@ -59,11 +57,14 @@ container:after {
 }
 
 content  {
+  -webkit-app-region: no-drag;
   position: absolute;
   background: rgb(255, 255, 255);
   overflow-wrap: break-word;
   padding: 7px 7px 7px 7px;
+  /* bottom: 0; */
   overflow: auto;
+  /* top: 0; */
   width: 100%;
   height: 100%;
 }
