--- a/static-page/styles/ui.css
+++ b/static-page/styles/ui.css
@@ -1,8 +1,21 @@
+.mdp-window {
+  height: 500px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  border: #000 1px solid;
+}
+
+.logo {
+  padding-top: 1em;
+  padding-bottom: 1.5em;
+  text-align: center;
+}
+
 titlebar {
   overflow: hidden;
   position: absolute;
   height: 23px;
-  width: 100%;
+  left: 16px;
+  right: 16px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
@@ -37,13 +50,10 @@ container {
   position: absolute;
   top: 27px;
   bottom: 0;
-  /* right: 0; */
-  /* left: 0; */
-  /* margin-left: auto; */
-  /* margin-right: auto; */
+  right: 16px;
+  left: 16px;
   max-width: 980px;
-  width: 100%;
-  height: 500px;
+  height: 472px;
 }
 
 container:after {
@@ -62,9 +72,9 @@ content  {
   background: rgb(255, 255, 255);
   overflow-wrap: break-word;
   padding: 7px 7px 7px 7px;
-  /* bottom: 0; */
+  /* bottom: 6px; */
   overflow: auto;
-  /* top: 0; */
+  /* top: 0px; */
   width: 100%;
   height: 100%;
 }
