--- a/styles/ui.css
+++ b/styles/ui.css
@@ -68,6 +68,37 @@ content  {
   left: 0;
 }
 
+rawmodal {
+  pointer-events: none;
+  position: absolute;
+  z-index: 100;
+  background: #fff;
+  border-radius: 2px;
+  height: 300px;
+  width: 66%;
+  left: 14.5%;
+  text-align: center;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  transition: all 0.6s cubic-bezier(.25,.8,.25,1);
+  top: -333px;
+  opacity: 0;
+}
+
+rawmodal[data-open] {
+  pointer-events: all;
+  top: 0;
+  opacity: 1;
+}
+
+
+#compiled_raw {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding: 0px;
+  border-radius: 2px;
+}
+
 ::-webkit-scrollbar {
   width: 7px;
   height: 7px;
