Add: support for :tag: emojis from GitHub

--- a/styles/ui.css
+++ b/styles/ui.css
@@ -68,6 +68,12 @@ content  {
   left: 0;
 }
 
+.img-emoji {
+  display: inline-block;
+  height: 24px;
+  width: 24px;
+}
+
 rawmodal {
   pointer-events: none;
   position: absolute;
