--- a/static-page/styles/ui.css
+++ b/static-page/styles/ui.css
@@ -1,13 +1,18 @@
 .mdp-window {
   height: 500px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  border: #000 1px solid;
+  border: #aaa 1px solid;
 }
 
 .logo {
   padding-top: 1em;
   padding-bottom: 1.5em;
   text-align: center;
+}
+
+.sub-title {
+  font-family: 'Passion One', normal;
+  font-size: 2.5em;
 }
 
 titlebar {
@@ -72,9 +77,7 @@ content  {
   background: rgb(255, 255, 255);
   overflow-wrap: break-word;
   padding: 7px 7px 7px 7px;
-  /* bottom: 6px; */
   overflow: auto;
-  /* top: 0px; */
   width: 100%;
   height: 100%;
 }
