--- a/static-page/styles/ui.css
+++ b/static-page/styles/ui.css
@@ -1,3 +1,11 @@
+body {
+  max-width: none;
+}
+
+div.container {
+  max-width: 960px;
+}
+
 .mdp-window {
   height: 500px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
@@ -13,6 +21,12 @@
 .sub-title {
   font-family: 'Passion One', normal;
   font-size: 2.5em;
+}
+
+.img-emoji {
+  display: inline-block;
+  height: 24px;
+  width: 24px;
 }
 
 titlebar {
@@ -57,7 +71,6 @@ container {
   bottom: 0;
   right: 16px;
   left: 16px;
-  max-width: 980px;
   height: 472px;
 }
 
