--- a/styles/ui.css
+++ b/styles/ui.css
@@ -36,6 +36,16 @@ titlebar .divider-vertical {
   position: relative;
 }
 
+titlebar .filename {
+  display: inline-block;
+  font-size: 10px;
+  margin-top: 5px;
+  max-width: 75%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 container {
   float: left;
   position: fixed;
