--- a/styles/ui.css
+++ b/styles/ui.css
@@ -36,7 +36,7 @@ titlebar .divider-vertical {
   position: relative;
 }
 
-titlebar .filename {
+titlebar .title-text {
   display: inline-block;
   font-size: 10px;
   margin-top: 5px;
