--- a/styles/github-element.css
+++ b/styles/github-element.css
@@ -25,3 +25,93 @@
 .github-element[data-status="err"] div.github-ratelimit {
   color: darkred;
 }
+
+.errctocat {
+  min-width: 400px;
+  min-height: 500px;
+  max-width: 365px;
+  max-height: 440px;
+  background: url('/img/errctocat.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+.errctocat-title {
+  color: red;
+  font-size: 10px;
+  position: relative;
+  top: 245px;
+  left: 90px;
+  font-family: monospace;
+  /* translate3d() enables anti-aliasing for the rotated text */
+  transform: rotate(-3.68deg) translate3d(0,0,0);
+  width: 200px;
+}
+
+.errctocat-content {
+  position: relative;
+  top: 255px;
+  left: 110px;
+  color: white;
+  transform: rotate(-3.68deg);
+  width: 200px;
+  font-size: 15px;
+}
+
+div[data-reset-in] {
+  text-align: center;
+  padding-top: 7px;
+  padding-bottom: 3px;
+  font-size: 20px;
+}
+div[data-reset-in][data-done] {
+  color: green;
+  animation: blinkResetDone 2s linear infinite;
+}
+
+@keyframes blinkResetDone {
+  33% {
+    opacity: 1;
+  }
+  34% {
+    opacity: 0;
+  }
+  66% {
+    opacity: 0;
+  }
+  67% {
+    opacity: 1
+  }
+}
+
+
+.errctocat-token-hint span {
+  position: absolute;
+  font-size: 10px;
+  bottom: -24px;
+  left: -16px;
+}
+
+.errctocat-token-hint {
+  text-align: center;
+}
+
+button {
+  cursor: pointer;
+  border: rgb(54, 65, 53) 1px solid;
+  background: rgb(59, 70, 58);
+  border-radius: 3px;
+  box-shadow: 2px 2px rgba(0,0,0,0.3);
+  color: #CCC;
+  outline: none;
+  transition: box-shadow 0.3s ease-out;
+}
+button:hover {
+  box-shadow: 3px 4px rgba(0,0,0,0.3); 
+}
+button:active {
+  box-shadow: 1px 1px rgba(0,0,0,0.3); 
+}
