--- a/styles/git-flavored.css
+++ b/styles/git-flavored.css
@@ -13,6 +13,8 @@ body {
   padding: 20px;
   max-width: 960px;
   margin: 0 auto;
+  min-height: 100px;
+  overflow: hidden;
 }
 
 body>*:first-child {
