--- a/styles/github-element.css
+++ b/styles/github-element.css
@@ -3,6 +3,10 @@
     text-overflow: clip;
 }
 
+.github-element .title-text {
+  padding-top: 0;
+}
+
 .github-element div.github-ratelimit.hidden {
   max-width: 0px;
 }
@@ -27,6 +31,7 @@
 }
 
 .errctocat {
+  position: relative;
   min-width: 400px;
   min-height: 500px;
   max-width: 365px;
@@ -36,8 +41,9 @@
   background-size: contain;
   margin-left: auto;
   margin-right: auto;
+  left: 0;
+  transition: box-shadow,left 0.3s ease-out;
 }
-
 
 .errctocat-title {
   color: red;
@@ -87,7 +93,6 @@ div[data-reset-in][data-done] {
   }
 }
 
-
 .errctocat-token-hint span {
   position: absolute;
   font-size: 10px;
@@ -115,3 +120,12 @@ button:hover {
 button:active {
   box-shadow: 1px 1px rgba(0,0,0,0.3); 
 }
+
+.errctocat[data-animation="raise"] {
+  box-shadow: 3px 4px 2px rgba(33, 33, 33, 0.3);
+}
+
+.errctocat[data-animation="slide-out"] {
+  left: -450px;
+}
+
