--- a/styles/ui.css
+++ b/styles/ui.css
@@ -11,8 +11,13 @@ titlebar {
 
 titlebar i.fa {
   -webkit-app-region: no-drag;
-  margin-right: 5px;
-  margin-top: 5px;
+  margin-top: 0;
+}
+
+titlebar .titlebar-icon-container {
+  padding-top: 5px;
+  padding-right: 5px;
+  height: 20px;
   cursor: pointer;
 }
 
@@ -36,14 +41,15 @@ titlebar .divider-vertical {
   position: relative;
 }
 
-titlebar .title-text {
+.title-text {
   display: inline-block;
   font-size: 10px;
-  margin-top: 5px;
+  padding-top: 5px;
   max-width: 75%;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  text-shadow: 1px 1px 2px rgba(33,33,33,0.3);
 }
 
 container {
